feat: add Temporal Simulation trigger
Add on_ActionStartTemporalSImulation funct

Add on_ActionStartTemporalSimulation implementation

feat: add timer icon

feat: add timer icon resource

Change action temporal simulation trigger to toggle

Add timer color icons

Change timer icon color to red

Add blue timer icon

remove timer.svg

Style: changing the Temporal Simulation icon color

set temporal simulation on tab changed

Add m_isTemporaSimulaion, variables to new wave form images and createTemporalSimulation function

Feat: add functions used in Temporal Simulation

Feat: add documentation in Temporal Simulation functions

Feat: add the cropped WaveForms correctly

Fix: enable the Temporal Simulation action

Refactor: removing unnecessary variables

Fix: fixed the switch from Temporal Simulation to Logical Simulation and vice versa in dolphin.
Co-Authored-By: Matheus Ramos Esteves <107145641+Esteves31@users.noreply.github.com>

--- a/app/bewaveddolphin.ui
+++ b/app/bewaveddolphin.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>BewavedDolphin</class>
  <widget class="QMainWindow" name="BewavedDolphin">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -69,6 +72,7 @@
    <addaction name="actionSetTo1"/>
    <addaction name="actionInvert"/>
    <addaction name="actionSetClockWave"/>
+   <addaction name="actionTemporalSimulation"/>
    <addaction name="separator"/>
    <addaction name="actionZoomIn"/>
    <addaction name="actionZoomOut"/>
@@ -437,6 +441,29 @@
   <action name="actionShowWaveforms">
    <property name="text">
     <string>Show Waveforms</string>
+   </property>
+  </action>
+  <action name="actionTemporalSimulation">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="resources/dolphin/dolphin.qrc">
+     <normaloff>:/dolphin/timerBlue.svg</normaloff>
+     <disabledoff>:/dolphin/timerBlue.svg</disabledoff>
+     <disabledon>:/dolphin/timerBlue.svg</disabledon>:/dolphin/timerBlue.svg</iconset>
+   </property>
+   <property name="text">
+    <string>TemporalSimulation</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+T</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::TextHeuristicRole</enum>
    </property>
   </action>
  </widget>
