--- a/app/mainwindow.ui
+++ b/app/mainwindow.ui
@@ -610,6 +610,7 @@ QTabWidget::pane {
    <addaction name="actionPlay"/>
    <addaction name="actionRestart"/>
    <addaction name="actionWaveform"/>
+   <addaction name="actionTemporalSimulation"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QMenuBar" name="menuBar">
@@ -728,6 +729,7 @@ QTabWidget::pane {
     <addaction name="actionMute"/>
     <addaction name="separator"/>
     <addaction name="actionBackground_Simulation"/>
+    <addaction name="actionTemporalSimulation"/>
    </widget>
    <widget class="QMenu" name="menuExamples">
     <property name="title">
@@ -1230,6 +1232,24 @@ QTabWidget::pane {
    </property>
    <property name="text">
     <string>Spanish</string>
+   </property>
+  </action>
+  <action name="actionTemporalSimulation">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="resources/toolbar/toolbar.qrc">
+     <normaloff>:/toolbar/timerRed.svg</normaloff>:/toolbar/timerRed.svg</iconset>
+   </property>
+   <property name="text">
+    <string>Temporal Simulation</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+T</string>
    </property>
   </action>
   <action name="actionShortcutsAndTips">
