--- a/app/resources/toolbar/toolbar.qrc
+++ b/app/resources/toolbar/toolbar.qrc
@@ -32,6 +32,7 @@
         <file>selectAll.svg</file>
         <file>spanish.svg</file>
         <file>stop.svg</file>
+        <file>timer.svg</file>
         <file>trashcan.svg</file>
         <file>undo.svg</file>
         <file>usa.svg</file>
