Add timer color icons
Change timer icon color to red

Add blue timer icon

Co-Authored-By: Matheus Ramos Esteves <107145641+Esteves31@users.noreply.github.com>

--- a/app/bewaveddolphin.ui
+++ b/app/bewaveddolphin.ui
@@ -69,6 +69,7 @@
    <addaction name="actionSetTo1"/>
    <addaction name="actionInvert"/>
    <addaction name="actionSetClockWave"/>
+   <addaction name="actionTemporalSimulation"/>
    <addaction name="separator"/>
    <addaction name="actionZoomIn"/>
    <addaction name="actionZoomOut"/>
@@ -437,6 +438,24 @@
   <action name="actionShowWaveforms">
    <property name="text">
     <string>Show Waveforms</string>
+   </property>
+  </action>
+  <action name="actionTemporalSimulation">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="resources/dolphin/dolphin.qrc">
+     <normaloff>:/dolphin/timerBlue.svg</normaloff>:/dolphin/timerBlue.svg</iconset>
+   </property>
+   <property name="text">
+    <string>TemporalSimulation</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+T</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::TextHeuristicRole</enum>
    </property>
   </action>
  </widget>
