--- a/app/resources/dolphin/dolphin.qrc
+++ b/app/resources/dolphin/dolphin.qrc
@@ -22,6 +22,7 @@
         <file>rising_blue.svg</file>
         <file>rising_green.svg</file>
         <file>save.svg</file>
+        <file>timerBlue.svg</file>
         <file>zoomIn.svg</file>
         <file>zoomOut.svg</file>
         <file>zoomRange.svg</file>
