--- a/app/resources/toolbar/toolbar.qrc
+++ b/app/resources/toolbar/toolbar.qrc
@@ -33,6 +33,7 @@
         <file>spanish.svg</file>
         <file>stop.svg</file>
         <file>timer.svg</file>
+        <file>timerRed.svg</file>
         <file>trashcan.svg</file>
         <file>undo.svg</file>
         <file>usa.svg</file>
