--- a/app/resources/dolphin/dolphin.qrc
+++ b/app/resources/dolphin/dolphin.qrc
@@ -4,14 +4,20 @@
         <file>delete.svg</file>
         <file>exit.svg</file>
         <file>falling_blue.svg</file>
+        <file>falling_blue_1_8.svg</file>
         <file>falling_green.svg</file>
+        <file>falling_green_1_8.svg</file>
         <file>folder.svg</file>
         <file>help.svg</file>
         <file>helpQt.svg</file>
         <file>high_blue.svg</file>
+        <file>high_blue_1_8.svg</file>
         <file>high_green.svg</file>
+        <file>high_green_1_8.svg</file>
         <file>low_blue.svg</file>
+        <file>low_blue_1_8.svg</file>
         <file>low_green.svg</file>
+        <file>low_green_1_8.svg</file>
         <file>new.svg</file>
         <file>paste.svg</file>
         <file>pdf.svg</file>
@@ -20,7 +26,9 @@
         <file>range.svg</file>
         <file>reloadFile.svg</file>
         <file>rising_blue.svg</file>
+        <file>rising_blue1_8.svg</file>
         <file>rising_green.svg</file>
+        <file>rising_green_1_8.svg</file>
         <file>save.svg</file>
         <file>timerBlue.svg</file>
         <file>zoomIn.svg</file>
