Style: changing the Temporal Simulation icon color

--- a/app/bewaveddolphin.ui
+++ b/app/bewaveddolphin.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>BewavedDolphin</class>
  <widget class="QMainWindow" name="BewavedDolphin">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -444,9 +447,14 @@
    <property name="checkable">
     <bool>true</bool>
    </property>
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
     <iconset resource="resources/dolphin/dolphin.qrc">
-     <normaloff>:/dolphin/timerBlue.svg</normaloff>:/dolphin/timerBlue.svg</iconset>
+     <normaloff>:/dolphin/timerBlue.svg</normaloff>
+     <disabledoff>:/dolphin/timerBlue.svg</disabledoff>
+     <disabledon>:/dolphin/timerBlue.svg</disabledon>:/dolphin/timerBlue.svg</iconset>
    </property>
    <property name="text">
     <string>TemporalSimulation</string>
