--- a/app/bewaveddolphin.ui
+++ b/app/bewaveddolphin.ui
@@ -448,7 +448,7 @@
     <bool>true</bool>
    </property>
    <property name="enabled">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="icon">
     <iconset resource="resources/dolphin/dolphin.qrc">
