--- a/app/resources/basic/basic.qrc
+++ b/app/resources/basic/basic.qrc
@@ -11,6 +11,8 @@
         <file>nor.svg</file>
         <file>not.svg</file>
         <file>or.svg</file>
+        <file>truthtable-rotated.svg</file>
+        <file>truthtable.svg</file>
         <file>xnor.svg</file>
         <file>xor.svg</file>
     </qresource>
