--- a/app/elementeditor.ui
+++ b/app/elementeditor.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>205</width>
-    <height>347</height>
+    <width>247</width>
+    <height>363</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -47,17 +47,94 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="0">
-       <widget class="QLabel" name="labelValue">
+      <item row="2" column="1">
+       <widget class="QComboBox" name="comboBoxInputSize"/>
+      </item>
+      <item row="11" column="0">
+       <widget class="QLabel" name="labelColor">
         <property name="text">
-         <string>Value:</string>
+         <string>Color:</string>
         </property>
        </widget>
       </item>
-      <item row="13" column="0">
-       <widget class="QLabel" name="labelAudio">
+      <item row="17" column="0" colspan="2">
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <property name="spacing">
+         <number>6</number>
+        </property>
+        <property name="sizeConstraint">
+         <enum>QLayout::SetNoConstraint</enum>
+        </property>
+        <item>
+         <widget class="QPushButton" name="pushButtonTruthTable">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
+          <property name="text">
+           <string>TruthTable</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButtonChangeSkin">
+          <property name="text">
+           <string>Change skin to ...</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButtonDefaultSkin">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="toolTip">
+           <string>Default</string>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="icon">
+           <iconset resource="resources/toolbar/toolbar.qrc">
+            <normaloff>:/toolbar/default.svg</normaloff>:/toolbar/default.svg</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>16</width>
+            <height>16</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="labelOutputs">
         <property name="text">
-         <string>Audio:</string>
+         <string>Outputs:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="16" column="1">
+       <widget class="QSpinBox" name="spinBoxPriority">
+        <property name="maximum">
+         <number>9</number>
+        </property>
+       </widget>
+      </item>
+      <item row="16" column="0">
+       <widget class="QLabel" name="labelPriority">
+        <property name="text">
+         <string>Priority:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="11" column="1">
+       <widget class="QComboBox" name="comboBoxColor">
+        <property name="currentText">
+         <string/>
         </property>
        </widget>
       </item>
@@ -68,33 +145,30 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="labelOutputs">
-        <property name="text">
-         <string>Outputs:</string>
+      <item row="9" column="1">
+       <widget class="QDoubleSpinBox" name="doubleSpinBoxFrequency">
+        <property name="specialValueText">
+         <string/>
+        </property>
+        <property name="suffix">
+         <string> Hz</string>
+        </property>
+        <property name="decimals">
+         <number>1</number>
+        </property>
+        <property name="minimum">
+         <double>0.000000000000000</double>
+        </property>
+        <property name="maximum">
+         <double>50.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.100000000000000</double>
         </property>
        </widget>
       </item>
-      <item row="9" column="0">
-       <widget class="QLabel" name="labelFrequency">
-        <property name="text">
-         <string>Frequency:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="labelLabels">
-        <property name="text">
-         <string>Label:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="11" column="0">
-       <widget class="QLabel" name="labelColor">
-        <property name="text">
-         <string>Color:</string>
-        </property>
-       </widget>
+      <item row="4" column="1">
+       <widget class="QComboBox" name="comboBoxOutputSize"/>
       </item>
       <item row="15" column="1">
        <widget class="QLineEdit" name="lineEditTrigger"/>
@@ -143,91 +217,10 @@
         </item>
        </widget>
       </item>
-      <item row="11" column="1">
-       <widget class="QComboBox" name="comboBoxColor">
-        <property name="currentText">
-         <string/>
-        </property>
-       </widget>
-      </item>
-      <item row="9" column="1">
-       <widget class="QDoubleSpinBox" name="doubleSpinBoxFrequency">
-        <property name="specialValueText">
-         <string/>
-        </property>
-        <property name="suffix">
-         <string> Hz</string>
-        </property>
-        <property name="decimals">
-         <number>1</number>
-        </property>
-        <property name="minimum">
-         <double>0.000000000000000</double>
-        </property>
-        <property name="maximum">
-         <double>50.000000000000000</double>
-        </property>
-        <property name="singleStep">
-         <double>0.100000000000000</double>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="1">
-       <widget class="QComboBox" name="comboBoxValue"/>
-      </item>
-      <item row="4" column="1">
-       <widget class="QComboBox" name="comboBoxOutputSize"/>
-      </item>
-      <item row="2" column="1">
-       <widget class="QComboBox" name="comboBoxInputSize"/>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="lineEditElementLabel"/>
-      </item>
-      <item row="17" column="0" colspan="2">
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <property name="sizeConstraint">
-         <enum>QLayout::SetNoConstraint</enum>
-        </property>
-        <item>
-         <widget class="QPushButton" name="pushButtonChangeSkin">
-          <property name="text">
-           <string>Change skin to ...</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="pushButtonDefaultSkin">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="toolTip">
-           <string>Default</string>
-          </property>
-          <property name="text">
-           <string/>
-          </property>
-          <property name="icon">
-           <iconset resource="resources/toolbar/toolbar.qrc">
-            <normaloff>:/toolbar/default.svg</normaloff>:/toolbar/default.svg</iconset>
-          </property>
-          <property name="iconSize">
-           <size>
-            <width>16</width>
-            <height>16</height>
-           </size>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item row="7" column="1">
-       <widget class="QCheckBox" name="checkBoxLocked">
+      <item row="6" column="0">
+       <widget class="QLabel" name="labelValue">
         <property name="text">
-         <string/>
+         <string>Value:</string>
         </property>
        </widget>
       </item>
@@ -238,19 +231,39 @@
         </property>
        </widget>
       </item>
-      <item row="16" column="0">
-       <widget class="QLabel" name="labelPriority">
+      <item row="0" column="0">
+       <widget class="QLabel" name="labelLabels">
         <property name="text">
-         <string>Priority:</string>
+         <string>Label:</string>
         </property>
        </widget>
       </item>
-      <item row="16" column="1">
-       <widget class="QSpinBox" name="spinBoxPriority">
-        <property name="maximum">
-         <number>9</number>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="lineEditElementLabel"/>
+      </item>
+      <item row="9" column="0">
+       <widget class="QLabel" name="labelFrequency">
+        <property name="text">
+         <string>Frequency:</string>
         </property>
        </widget>
+      </item>
+      <item row="7" column="1">
+       <widget class="QCheckBox" name="checkBoxLocked">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="13" column="0">
+       <widget class="QLabel" name="labelAudio">
+        <property name="text">
+         <string>Audio:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="1">
+       <widget class="QComboBox" name="comboBoxValue"/>
       </item>
      </layout>
     </widget>
