--- a/app/resources/memory/dark/memory_dark.qrc
+++ b/app/resources/memory/dark/memory_dark.qrc
@@ -5,6 +5,7 @@
         <file>JK-flipflop.svg</file>
         <file>JK-latch.svg</file>
         <file>SR-flipflop.svg</file>
+        <file>SR-latch.svg</file>
         <file>T-flipflop.svg</file>
         <file>T-latch.svg</file>
     </qresource>
