--- a/app/elementeditor.ui
+++ b/app/elementeditor.ui
@@ -40,27 +40,28 @@
       <string>Title</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="0" column="0">
-       <widget class="QLabel" name="labelLabels">
+      <item row="10" column="0">
+       <widget class="QLabel" name="labelTrigger">
         <property name="text">
-         <string>Label:</string>
+         <string>Trigger:</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="lineEditElementLabel"/>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="labelInputs">
+      <item row="9" column="0">
+       <widget class="QLabel" name="labelAudioBox">
         <property name="text">
-         <string>Inputs:</string>
+         <string>Audio:</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <widget class="QComboBox" name="comboBoxInputSize"/>
+      <item row="5" column="1">
+       <widget class="QCheckBox" name="checkBoxLocked">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
       </item>
-      <item row="2" column="0">
+      <item row="3" column="0">
        <widget class="QLabel" name="labelOutputs">
         <property name="text">
          <string>Outputs:</string>
@@ -68,40 +69,12 @@
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QComboBox" name="comboBoxOutputSize"/>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="labelValue">
-        <property name="text">
-         <string>Value:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QComboBox" name="comboBoxValue"/>
-      </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="labelLocked">
-        <property name="text">
-         <string>Locked:</string>
-        </property>
-       </widget>
+       <widget class="QComboBox" name="comboBoxInputSize"/>
       </item>
       <item row="4" column="1">
-       <widget class="QCheckBox" name="checkBoxLocked">
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
+       <widget class="QComboBox" name="comboBoxValue"/>
       </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="labelFrequency">
-        <property name="text">
-         <string>Frequency:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="1">
+      <item row="6" column="1">
        <widget class="QDoubleSpinBox" name="doubleSpinBoxFrequency">
         <property name="specialValueText">
          <string/>
@@ -123,133 +96,38 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="0">
-       <widget class="QLabel" name="labelColor">
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="lineEditElementLabel"/>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="labelInputs">
         <property name="text">
-         <string>Color:</string>
+         <string>Inputs:</string>
         </property>
        </widget>
       </item>
-      <item row="6" column="1">
-       <widget class="QComboBox" name="comboBoxColor">
-        <property name="currentText">
-         <string/>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="0">
-       <widget class="QLabel" name="labelAudio">
-        <property name="text">
-         <string>Audio:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="1">
-       <widget class="QComboBox" name="comboBoxAudio">
-        <item>
-         <property name="text">
-          <string>C6</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>D6</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>E6</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>F6</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>G6</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>A7</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>B7</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>C7</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-      <item row="8" column="0">
-       <widget class="QLabel" name="labelAudioBox">
-        <property name="text">
-         <string>Audio:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="8" column="1">
-       <layout class="QHBoxLayout" name="horizontalLayout_2">
-        <item>
-         <widget class="QLineEdit" name="lineCurrentAudioBox">
-          <property name="readOnly">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="pushButtonAudioBox">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>28</width>
-            <height>16777215</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>...</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item row="9" column="0">
-       <widget class="QLabel" name="labelTrigger">
-        <property name="text">
-         <string>Trigger:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="9" column="1">
-       <widget class="QLineEdit" name="lineEditTrigger"/>
-      </item>
-      <item row="10" column="0">
-       <widget class="QLabel" name="labelPriority">
-        <property name="text">
-         <string>Priority:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="10" column="1">
+      <item row="11" column="1">
        <widget class="QSpinBox" name="spinBoxPriority">
         <property name="maximum">
          <number>9</number>
         </property>
        </widget>
       </item>
-      <item row="11" column="0" colspan="2">
+      <item row="4" column="0">
+       <widget class="QLabel" name="labelValue">
+        <property name="text">
+         <string>Value:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="0">
+       <widget class="QLabel" name="labelLocked">
+        <property name="text">
+         <string>Locked:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="12" column="0" colspan="2">
        <layout class="QHBoxLayout" name="horizontalLayout">
         <property name="spacing">
          <number>6</number>
@@ -301,6 +179,138 @@
          </widget>
         </item>
        </layout>
+      </item>
+      <item row="11" column="0">
+       <widget class="QLabel" name="labelPriority">
+        <property name="text">
+         <string>Priority:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="1">
+       <widget class="QComboBox" name="comboBoxColor">
+        <property name="currentText">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QComboBox" name="comboBoxOutputSize"/>
+      </item>
+      <item row="8" column="0">
+       <widget class="QLabel" name="labelAudio">
+        <property name="text">
+         <string>Audio:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="labelLabels">
+        <property name="text">
+         <string>Label:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="10" column="1">
+       <widget class="QLineEdit" name="lineEditTrigger"/>
+      </item>
+      <item row="8" column="1">
+       <widget class="QComboBox" name="comboBoxAudio">
+        <item>
+         <property name="text">
+          <string>C6</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>D6</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>E6</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>F6</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>G6</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>A7</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>B7</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>C7</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="6" column="0">
+       <widget class="QLabel" name="labelFrequency">
+        <property name="text">
+         <string>Frequency:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="0">
+       <widget class="QLabel" name="labelColor">
+        <property name="text">
+         <string>Color:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="9" column="1">
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QLineEdit" name="lineCurrentAudioBox">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButtonAudioBox">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>28</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="labelNode">
+        <property name="text">
+         <string>Node:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QComboBox" name="comboBoxNode"/>
       </item>
      </layout>
     </widget>
