--- a/_includes/header.html
+++ b/_includes/header.html
@@ -73,7 +73,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ site.data.global.url }}" id="title">WiRedPanda</a>
+                <a class="navbar-brand" href="{{ site.data.global.url }}" id="title">wiRedPanda</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
