--- a/css/style.scss
+++ b/css/style.scss
@@ -328,7 +328,7 @@ pre {
         width: 100%;
         height: 100%;
         z-index: -1;
-        background: url(../images/torres.jpg) no-repeat 50% 50%;
+        background: url() no-repeat 50% 50%;
         background-size: cover;
         opacity: 0.5;
     }
