added: 16-segment display

--- a/app/resources/output/output.qrc
+++ b/app/resources/output/output.qrc
@@ -15,10 +15,16 @@
         <file>buzzer/BuzzerOn.svg</file>
         <file>counter/counter_14_off.svg</file>
         <file>counter/counter_14_on.svg</file>
+        <file>counter/counter_16_off.svg</file>
+        <file>counter/counter_16_on.svg</file>
         <file>counter/counter_a.svg</file>
+        <file>counter/counter_a1.svg</file>
+        <file>counter/counter_a2.svg</file>
         <file>counter/counter_b.svg</file>
         <file>counter/counter_c.svg</file>
         <file>counter/counter_d.svg</file>
+        <file>counter/counter_d1.svg</file>
+        <file>counter/counter_d2.svg</file>
         <file>counter/counter_dp.svg</file>
         <file>counter/counter_e.svg</file>
         <file>counter/counter_f.svg</file>
