--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,7 +1,7 @@
 ---
-import '../styles/global.css';
-
 import { ViewTransitions } from "astro:transitions";
+
+import '../styles/global.css';
 
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
@@ -9,21 +9,27 @@ import Footer from '../components/Footer.astro';
 const { pageTitle } = Astro.props;
 --- 
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/ico" href="/wiRedPanda/wpanda.ico" />
-  	<meta name="viewport" content="width=device-width" />
+<html lang="en" data-theme="dark">
+	<head>
+		<meta charset="utf-8" />
+    <link rel="icon" type="image/ico" href={`${import.meta.env.BASE_URL}wpanda.ico`} />
+		<meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <script is:inline defer src="https://kit.fontawesome.com/1b8f56875d.js" crossorigin="anonymous"></script>
     <ViewTransitions />
     <title>Panda | {pageTitle}</title>
-  </head>
+	</head>
   <body>
     <Header />
     <main transition:animate="fade">
       <slot />
     </main>
     <Footer />
-  </body>
+	</body>
 </html>
+
+<style>
+main {
+  padding-top: 12%;
+}
+</style>
